--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "dotenv": "^11.0.0",
     "ejs": "^3.1.2",
     "express": "^4.17.1",
     "mongoose": "^5.9.19"
